deploy: fa753cfee0a93de5666b6749c514a5c3f7a8f116

--- a/ch01/04-movement.html
+++ b/ch01/04-movement.html
@@ -85,7 +85,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../intro.html">Introduction</a></li><li class="chapter-item expanded "><a href="../ch01/00-index.html"><strong aria-hidden="true">1.</strong> Quickstart</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../ch01/01-launch.html"><strong aria-hidden="true">1.1.</strong> Launch the game</a></li><li class="chapter-item expanded "><a href="../ch01/02-model.html"><strong aria-hidden="true">1.2.</strong> Import a model</a></li><li class="chapter-item expanded "><a href="../ch01/03-camera.html"><strong aria-hidden="true">1.3.</strong> See through a camera</a></li><li class="chapter-item expanded "><a href="../ch01/04-movement.html" class="active"><strong aria-hidden="true">1.4.</strong> Move objects</a></li><li class="chapter-item expanded "><a href="../ch01/05-event.html"><strong aria-hidden="true">1.5.</strong> Respond to events</a></li><li class="chapter-item expanded "><a href="../ch01/06-state.html"><strong aria-hidden="true">1.6.</strong> Manage behaviors with states</a></li><li class="chapter-item expanded "><a href="../ch01/07-recap.html"><strong aria-hidden="true">1.7.</strong> Recap</a></li></ol></li><li class="chapter-item expanded "><a href="../ch02/00-index.html"><strong aria-hidden="true">2.</strong> Development and Debugging</a></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">2.1.</strong> Project structure</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.2.</strong> Workflow</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.3.</strong> Asset management</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.4.</strong> Logging</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.5.</strong> Debugging</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.</strong> World</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.</strong> Scene</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.2.</strong> Coordinates and transform</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.3.</strong> Spawn and discard</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.4.</strong> Time</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.</strong> Rendering</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">4.1.</strong> PBR: basic idea</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.2.</strong> Mesh</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.3.</strong> Material</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.4.</strong> Texture</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.5.</strong> Light</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.6.</strong> Camera</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">5.</strong> Physics</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">5.1.</strong> Rigid-body</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">5.2.</strong> Movement</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">5.3.</strong> Collision</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">6.</strong> Control</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">6.1.</strong> Character control</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">6.2.</strong> Animation</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">6.3.</strong> Camera control</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">7.</strong> Game State Management</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">7.1.</strong> Custom events</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">7.2.</strong> State machine</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">7.3.</strong> Scheduling</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">7.4.</strong> Database</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">8.</strong> UI</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">8.1.</strong> Text rendering</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">8.2.</strong> Overlays</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">8.3.</strong> Using UI frameworks</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">9.</strong> Visual Effects</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">9.1.</strong> Realistic or artistic</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">9.2.</strong> Using current tools creatively</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">9.3.</strong> Shader</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">9.4.</strong> Particle</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">10.</strong> Audio</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">10.1.</strong> Play</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">10.2.</strong> Blend</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">10.3.</strong> Generate</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">10.4.</strong> 3D audio</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">11.</strong> 2D</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">12.</strong> Game Release</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">12.1.</strong> Before releasing</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">12.2.</strong> Build command</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">12.3.</strong> Optimizations</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">12.4.</strong> Release platforms</div></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../intro.html">Introduction</a></li><li class="chapter-item expanded "><a href="../ch01/00-index.html"><strong aria-hidden="true">1.</strong> Quickstart</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../ch01/01-launch.html"><strong aria-hidden="true">1.1.</strong> Launch the game</a></li><li class="chapter-item expanded "><a href="../ch01/02-model.html"><strong aria-hidden="true">1.2.</strong> Import a model</a></li><li class="chapter-item expanded "><a href="../ch01/03-camera.html"><strong aria-hidden="true">1.3.</strong> See through a camera</a></li><li class="chapter-item expanded "><a href="../ch01/04-movement.html" class="active"><strong aria-hidden="true">1.4.</strong> Move objects</a></li><li class="chapter-item expanded "><a href="../ch01/05-event.html"><strong aria-hidden="true">1.5.</strong> Respond to events</a></li><li class="chapter-item expanded "><a href="../ch01/06-state.html"><strong aria-hidden="true">1.6.</strong> Manage behaviors with states</a></li><li class="chapter-item expanded "><a href="../ch01/07-recap.html"><strong aria-hidden="true">1.7.</strong> Recap</a></li></ol></li><li class="chapter-item expanded "><a href="../ch02/00-index.html"><strong aria-hidden="true">2.</strong> Development and Debugging</a></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">2.1.</strong> Project structure</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.2.</strong> Workflow</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.3.</strong> Asset management</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.4.</strong> Logging</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">2.5.</strong> Debugging</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.</strong> World</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">3.1.</strong> Data representation</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.2.</strong> Scene</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.3.</strong> Coordinates and transform</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.4.</strong> Spawn and discard</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">3.5.</strong> Time</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.</strong> Rendering</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">4.1.</strong> PBR: basic idea</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.2.</strong> Mesh</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.3.</strong> Material</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.4.</strong> Texture</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.5.</strong> Light</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">4.6.</strong> Camera</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">5.</strong> Physics</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">5.1.</strong> Rigid-body</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">5.2.</strong> Movement</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">5.3.</strong> Collision</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">6.</strong> Control</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">6.1.</strong> Character control</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">6.2.</strong> Animation</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">6.3.</strong> Camera control</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">7.</strong> Game State Management</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">7.1.</strong> Custom events</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">7.2.</strong> State machine</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">7.3.</strong> Scheduling</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">7.4.</strong> Database</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">8.</strong> UI</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">8.1.</strong> Text rendering</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">8.2.</strong> Overlays</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">8.3.</strong> Using UI frameworks</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">9.</strong> Visual Effects</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">9.1.</strong> Realistic or artistic</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">9.2.</strong> Using current tools creatively</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">9.3.</strong> Shader</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">9.4.</strong> Particle</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">10.</strong> Audio</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">10.1.</strong> Play</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">10.2.</strong> Blend</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">10.3.</strong> Generate</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">10.4.</strong> 3D audio</div></li></ol></li><li class="chapter-item expanded "><div><strong aria-hidden="true">11.</strong> 2D</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">12.</strong> Game Release</div></li><li><ol class="section"><li class="chapter-item expanded "><div><strong aria-hidden="true">12.1.</strong> Before releasing</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">12.2.</strong> Build command</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">12.3.</strong> Optimizations</div></li><li class="chapter-item expanded "><div><strong aria-hidden="true">12.4.</strong> Release platforms</div></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -170,7 +170,85 @@
                     <main>
                         <h1 id="move-objects"><a class="header" href="#move-objects">Move objects</a></h1>
 <ul>
-<li>Write a system to move the fox around [TODO]</li>
+<li>
+<p>Till now, we've only been creating objects at the beginning of the game. Our game world is still uninterestingly static.</p>
+</li>
+<li>
+<p>To make changes to <strong>entities</strong> in our game world, we write a <strong>system</strong> that mutates the <strong>components</strong> of our concern. <code>ch01/step-4-1</code></p>
+<ul>
+<li>
+<p>If we want to move something around, the component that we want to modify is <code>Transform</code>, which defines the position, rotation and scale of entities.</p>
+</li>
+<li>
+<p>To mutate a certain type of component, write a normal Rust function with following signature:</p>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>fn move_objects(mut query: Query&lt;&amp;mut Transform&gt;) {
+    for mut transform in &amp;mut query {
+        todo!(&quot;now you can mutate transform in place&quot;);
+    }
+}
+<span class="boring">}</span></code></pre></pre>
+</li>
+<li>
+<p>However, there are many entities that can have the same type of component. What if we only want to make changes to just a few of them?</p>
+<ul>
+<li>
+<p>The solution is, we <em>tag</em> these entites with a custom component:</p>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>#[derive(Component)]
+struct Fox;  // a custom component; we use it as a tag
+
+fn setup() {
+    // ...
+    commands
+      .spawn(SceneBundle {
+          scene: asset_server.load(&quot;models/Fox.glb#Scene0&quot;),
+          transform: Transform::from_scale(Vec3::splat(0.1)),
+          ..default()
+      })
+      .insert(Fox);  // tag this entity with Fox component
+}
+<span class="boring">}</span></code></pre></pre>
+</li>
+</ul>
+</li>
+<li>
+<p>Then we can make changes only to <code>Transform</code> components of entities that also have a <code>Fox</code> component attached:</p>
+<pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
+</span><span class="boring">fn main() {
+</span>fn move_fox(
+    // query more than one components with Query&lt;(...)&gt;
+    mut query: Query&lt;(&amp;Fox, &amp;mut Transform)&gt;
+) {
+    for (_, mut transform) in &amp;mut query {
+        // let's foward the fox a little
+        transform.translation.z += 0.1;
+    }
+}
+<span class="boring">}</span></code></pre></pre>
+</li>
+<li>
+<p>Finally, we decide <em>when</em> this system is run. Let's start by running this system once per frame (i.e. on <code>Update</code>):</p>
+<pre><pre class="playground"><code class="language-rust">fn main() {
+    App::new()
+      // ...
+      .add_systems(Update, move_fox)
+      .run();
+}</code></pre></pre>
+</li>
+<li>
+<p>Now hit <code>cargo run</code>, you will see the fox slowly moving forward along the Z axis.</p>
+</li>
+</ul>
+</li>
+</ul>
+<blockquote>
+<p>Note:</p>
+<p><a href="https://bevy-cheatbook.github.io/programming/intro-data.html">The Unofficial Bevy Cheat Book</a> has a detailed explanation of the relationship between entities and componentes.</p>
+</blockquote>
+<ul>
 <li>Trigger an animation when moving [TODO]
 <ul>
 <li>https://github.com/bevyengine/bevy/blob/main/examples/animation/animated_fox.rs</li>
